fix(Carousel): fix vertical alignement issue

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,7 +1,5 @@
 .carousel {
     position: relative;
-    display: grid;
-    place-items: center;
     margin: 2em auto 4em;
     height: 30em;
     border-radius: 1.5em;
@@ -15,6 +13,14 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.carousel__controls{
+    position: relative;
+    display: grid;
+    place-items: center;
+    height: 100%;
+    width: 100%;
 }
 
 button {
@@ -54,8 +60,6 @@ button {
     }
 
     .slider-count {
-        position: absolute;
         font-size: 1rem;
-        bottom: 1rem;
     }
 }
